updated genetic algo code

--- a/DL_CNN.ipynb
+++ b/DL_CNN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "qO6JYp0PLfxr"
       },
@@ -50,13 +50,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FfUBKu7EL3_6",
-        "outputId": "2edcea15-e243-40b8-ba88-8424d54d92b1"
+        "outputId": "6885ad45-d65b-4640-bef0-93420df52c42"
       },
       "outputs": [
         {
@@ -186,18 +186,18 @@
       ],
       "metadata": {
         "id": "sQzTC_9a8BRD",
-        "outputId": "a4fd6347-cc99-4451-d41f-934004f45979",
+        "outputId": "03ff5d76-6464-412b-f5e2-980e68de2cfd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-4-ea390ae9c461>:15: RuntimeWarning: invalid value encountered in cast\n",
+            "<ipython-input-3-ea390ae9c461>:15: RuntimeWarning: invalid value encountered in cast\n",
             "  image = Image.fromarray(pixels.astype(np.uint8))\n"
           ]
         },
@@ -235,12 +235,12 @@
       ],
       "metadata": {
         "id": "ziJVsApFGY9R",
-        "outputId": "107edab1-e117-47e0-9851-3d57781e52ca",
+        "outputId": "aff54ef6-94c1-4a06-e841-00758f40f134",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,10 +254,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "dIVoMKstltk7",
-        "outputId": "a315ce22-17a5-4450-b9b9-1dd983ca0d26",
+        "outputId": "bd36aca7-0167-446a-9b0f-daf34ee012fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "2FJiONFpLfxs"
       },
@@ -335,7 +335,7 @@
         "    featurewise_std_normalization=True\n",
         ")\n",
         "\n",
-        "train_generator = datagen.flow(X_train, y_train, batch_size=64)"
+        "train_generator = datagen.flow(X_train, y_train, batch_size=32)"
       ]
     },
     {
@@ -812,42 +812,88 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install deap"
+      ],
+      "metadata": {
+        "id": "mugegu_dze-F",
+        "outputId": "1c9b3709-bb23-41af-f50d-5fc50f92c46a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting deap\n",
+            "  Downloading deap-1.4.1-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (13 kB)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from deap) (1.26.4)\n",
+            "Downloading deap-1.4.1-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (135 kB)\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/135.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m135.4/135.4 kB\u001b[0m \u001b[31m11.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: deap\n",
+            "Successfully installed deap-1.4.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "wivCSiFxLfxu"
       },
       "outputs": [],
       "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.applications import ResNet50, VGG19\n",
+        "from tensorflow.keras.layers import Input, Dense, Dropout, GlobalAveragePooling2D, Concatenate\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "import numpy as np\n",
         "import random\n",
         "from deap import base, creator, tools, algorithms\n",
+        "\n",
+        "# Dummy dataset for demonstration\n",
+        "x_train = np.random.rand(100, 224, 224, 3)\n",
+        "y_train = tf.keras.utils.to_categorical(np.random.randint(0, 2, size=(100, 1)), 2)\n",
+        "x_val = np.random.rand(20, 224, 224, 3)\n",
+        "y_val = tf.keras.utils.to_categorical(np.random.randint(0, 2, size=(20, 1)), 2)\n",
         "\n",
         "# Fitness function\n",
         "def evaluate(params):\n",
         "    lr, d1_units, d1_drop, d2_units, d2_drop = params\n",
         "\n",
-        "    # Build model\n",
+        "    # Redefine Input and Model within scope\n",
+        "    input_shape = (224, 224, 3)\n",
         "    inputs = Input(shape=input_shape)\n",
-        "    resnet_base = ResNet50(weights='imagenet', include_top=False, input_shape=input_shape, trainable=True)\n",
-        "    vgg_base = VGG19(weights='imagenet', include_top=False, input_shape=input_shape, trainable=True)\n",
         "\n",
+        "    # Pre-trained models\n",
+        "    resnet_base = ResNet50(weights='imagenet', include_top=False, input_shape=input_shape, trainable=False)\n",
+        "    vgg_base = VGG19(weights='imagenet', include_top=False, input_shape=input_shape, trainable=False)\n",
+        "\n",
+        "    # Feature extraction\n",
         "    resnet_features = GlobalAveragePooling2D()(resnet_base(inputs))\n",
         "    vgg_features = GlobalAveragePooling2D()(vgg_base(inputs))\n",
-        "\n",
         "    combined_features = Concatenate()([resnet_features, vgg_features])\n",
         "\n",
+        "    # Classification head\n",
         "    x = Dense(d1_units, activation='relu')(combined_features)\n",
         "    x = Dropout(d1_drop)(x)\n",
         "    x = Dense(d2_units, activation='relu')(x)\n",
         "    x = Dropout(d2_drop)(x)\n",
         "    outputs = Dense(2, activation='softmax')(x)\n",
         "\n",
+        "    # Compile model\n",
         "    model = Model(inputs, outputs)\n",
-        "    optimizer = Adam(learning_rate=lr)\n",
-        "    model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "    model.compile(optimizer=Adam(learning_rate=lr), loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "    # Train\n",
+        "    # Train model (few epochs for speed)\n",
         "    history = model.fit(x_train, y_train, validation_data=(x_val, y_val), epochs=3, verbose=0)\n",
-        "    return max(history.history['val_accuracy']),\n",
+        "    val_accuracy = max(history.history['val_accuracy'])\n",
+        "    return val_accuracy,\n",
         "\n",
         "# Genetic Algorithm Setup\n",
         "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
@@ -861,7 +907,8 @@
         "toolbox.register(\"attr_d2_drop\", random.uniform, 0.2, 0.5)\n",
         "\n",
         "toolbox.register(\"individual\", tools.initCycle, creator.Individual,\n",
-        "                 (toolbox.attr_lr, toolbox.attr_d1_units, toolbox.attr_d1_drop, toolbox.attr_d2_units, toolbox.attr_d2_drop), n=1)\n",
+        "                 (toolbox.attr_lr, toolbox.attr_d1_units, toolbox.attr_d1_drop,\n",
+        "                  toolbox.attr_d2_units, toolbox.attr_d2_drop), n=1)\n",
         "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n",
         "\n",
         "toolbox.register(\"mate\", tools.cxBlend, alpha=0.5)\n",
@@ -869,20 +916,21 @@
         "toolbox.register(\"select\", tools.selTournament, tournsize=3)\n",
         "toolbox.register(\"evaluate\", evaluate)\n",
         "\n",
-        "# Run GA\n",
+        "# Run Genetic Algorithm\n",
         "population = toolbox.population(n=10)\n",
         "algorithms.eaSimple(population, toolbox, cxpb=0.5, mutpb=0.2, ngen=5, verbose=True)\n",
         "\n",
-        "# Print best individual\n",
+        "# Get the best individual\n",
         "best_individual = tools.selBest(population, 1)[0]\n",
-        "print(\"Best Hyperparameters:\", best_individual)\n"
+        "print(\"Best Hyperparameters:\", best_individual)\n",
+        "\n"
       ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "gpuType": "A100",
+      "gpuType": "L4",
       "provenance": [],
       "include_colab_link": true
     },
